--- a/src/css/8000-homepage-base.css
+++ b/src/css/8000-homepage-base.css
@@ -74,7 +74,7 @@
 
     & .EnterButtonSpacingBefore,
     & .EnterButtonSpacingAfter {
-      width: 15%;
+      width: 17%;
       display: inline-block;
     }
 
