--- a/src/css/8300-homepage-base-modern-color.css
+++ b/src/css/8300-homepage-base-modern-color.css
@@ -13,15 +13,15 @@
 
           & li:nth-child(odd) {
             transform: rotate(-3deg);
-            z-index: 10;
+            z-index: 8;
           }
           & li:nth-child(even) {
             transform: rotate(5deg);
-            z-index: 10;
+            z-index: 8;
           }
           & li:nth-child(3) {
             transform: translate(0,-60%) rotate(3deg);
-            z-index: 9;
+            z-index: 7;
           }
           & li:nth-child(4) {
             transform: translate(0,-55%) rotate(0deg);
